--- a/shared/package.json
+++ b/shared/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "./src/main.ts",
+	"types": "./src/main.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
